<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Local Stories</string>
    <string name="action_settings">Settings</string>
    
    <string name="edit_message">Enter search-terms</string>
    <string name="from_year_text">From: </string>
    <string name="from_year_value">1950 BCE</string>
    <string name="to_year_text">To: </string>
    <string name="to_year_value">2013 CE</string>
    <string name="radius_text">Radius: </string>
    <string name="radius_value">500km</string>
    <string name="button_send">Search</string>
    <string name="button_map">Map View</string>
    <string name="button_list">List View</string>
    <string name="button_update">Update My Location</string>
    <string name="button_location">Show My Location</string>
    
    <string name="item_title">Title</string>
    <string name="item_date">XX/XX/XXXX</string>
    
    <string name="evt_back">Go Back</string>
    <string name="evt_title">Event Title</string>
    <string name="evt_loc">Show on Map</string>
    <string name="evt_text">Article</string>
    <string name="evt_photos">Photos</string>
    <string name="evt_audio">Audio</string>
    
 	<string name="evt_add_photo">Add Photo</string>
    
    <string name="display_photo">Displaying Photo</string>
    <string name="rate_photo">Rate Picture!</string>
    <string name="rate_p1">Bad</string>
    <string name="rate_p2">Ok</string>
    <string name="rate_p3">Good</string>
    <string name="comment_photo">Comment on Photo</string>
    
    <string name="play_audio">Playing Audio</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result_page">ResultPageActivity</string>
    <string name="title_activity_event">EventActivity</string>

</resources>