<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:orientation="vertical"
    tools:context=".EventActivity" >
    
    <TableRow style="?android:attr/buttonBarStyle"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal" >
        
        <Button style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/evt_back"
	        android:onClick="backButton" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" >
        
        <TextView style="?android:attr/textAppearanceLarge"
            android:id="@+id/EventHeader"
        	android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/display_photo"
            android:gravity="center"
            android:textColor="#ffffff" />
    </TableRow>
    
    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >
        
        <TextView style="?android:attr/textAppearance"
        	android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rate_photo"
            android:gravity="center"
            android:textColor="#ffffff" />
    </TableRow>
    
    <TableRow style="?android:attr/buttonBarStyle"
	    android:background="#000000"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight=".1"
	    android:weightSum="0.9"
	    android:orientation="horizontal" >
      
    	<Button style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight=".3"
	        android:text="@string/rate_p1" />
    
	    <Button style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight=".3"
	        android:text="@string/rate_p2" />
	    
	    <Button style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight=".3"
	        android:text="@string/rate_p3" />
    </TableRow>
    
    <TableRow
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="horizontal" >
        
        <Button
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/comment_photo" />
    </TableRow>

</LinearLayout>