<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
        android:layout_weight="1"
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_send"
	        android:onClick="sendMessage" />
    </TableRow>
    
    <TableRow
        android:id="@+id/range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="5dp" >
	</TableRow>
	
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#111111"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" />
	
    <TableRow
        android:background="#222222"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:paddingBottom="5dp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="3dp" >

        <TextView
            android:id="@+id/fromYearText"
        	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/from_year_text"
            android:textColor="#666666"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/fromYearValue"
        	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/from_year_value"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/hidden_value"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".20"
	        android:text=""
	    	android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/toDateText"
        	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/to_year_text"
            android:textColor="#666666"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/toYearValue"
        	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/to_year_value"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
	</TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" />
    
    <TableRow
        android:background="#111111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" 
	    android:paddingTop="3dp" >

        <SeekBar
            android:id="@+id/RadiusSeekBar"
            android:progress="5"
            android:layout_weight="1"
        	android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/radiusText"
        	android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radius_text"
            android:textColor="#666666"
            android:paddingRight="3dp"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/radiusValue"
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius_value"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
	</TableRow>
	
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#666666"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" />
	
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button1"
            android:background="#1C96D0"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4975"
            android:text="@string/button_map"
            android:onClick="mapView" />
        
        <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.005"
        android:background="#666666" />

        <Button
            android:id="@+id/button2"
            android:background="#1C96D0"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4975"
            android:text="@string/button_list"
            android:onClick="listView" />
	</TableRow>
	
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#666666"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" />

    <RelativeLayout
	    android:id="@+id/fragment_container"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" />

</LinearLayout>